--- a/navigator-onepage-business-template-master/index.html
+++ b/navigator-onepage-business-template-master/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Navigator - One Page Material Design Bootstrap Theme</title>
+    <title>ClubBud</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
@@ -43,6 +43,7 @@
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
 
 
     <!-- Modernizer js -->
@@ -63,14 +64,11 @@
     <div class="menu-wrap">
 		<nav class="menu">
 			<div class="icon-list">
-				<a href="#home" class="logo page-scroll waves-effect">Navigator</a>
+				<a href="#home" class="logo page-scroll waves-effect">Menu</a>
+        <a href="#portfolio" class="page-scroll waves-effect"><i class="fa fa-fw fa-bell-o"></i><span>Login</span></a>
 				<a href="#about-us" class="page-scroll waves-effect"><i class="fa fa-fw fa-user"></i><span>About Us</span></a>
-				<a href="#portfolio" class="page-scroll waves-effect"><i class="fa fa-fw fa-bell-o"></i><span>Portfolio</span></a>
-				<a href="#service" class="page-scroll waves-effect"><i class="fa fa-fw fa-bar-chart-o"></i><span>Services</span></a>
-				<a href="#team" class="page-scroll waves-effect"><i class="fa fa-fw fa-users"></i><span>Our Team</span></a>
-				<a href="#latest-news" class="page-scroll waves-effect"><i class="fa fa-fw fa-mortar-board"></i><span>Latest News</span></a>
-				<a href="#client" class="page-scroll waves-effect"><i class="fa fa-fw fa-comment-o"></i><span>Testimonial</span></a>
-				<a href="#contact" class="page-scroll waves-effect"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
+				<a href="#team" class="page-scroll waves-effect"><i class="fa fa-fw fa-users"></i><span>Universities</span></a>
+				<a href="#contact" class="page-scroll waves-effect"><i class="fa fa-fw fa-envelope-o"></i><span>Contact Us</span></a>
 			</div>
 		</nav>
 		<button class="close-button" id="close-button">Close Menu</button>
@@ -85,9 +83,9 @@
     <section class="header" id="home">
         <div class="container">
             <div class="intro-text">
-                <h1>Welcome To The <span>Navigator</span></h1>
-                <p>Lorem Ipsum is simply dummy text of the</br> printing and typesetting industry.</p>
-                <a href="#feature" class="page-scroll waves-effect btn btn-primary">Read More</a>
+                <h1><span>ClubBud</span></h1>
+                <p>Come and find new clubs!</br></p>
+                <!-- <a href="#about-us" class="page-scroll waves-effect btn btn-primary">Read More</a> -->
             </div>
         </div>
     </section>
@@ -103,36 +101,42 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title text-center">
                             <h2>About Us</h2>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate</p>
+                            <p>We are a blah blah organization.</p>
                         </div>
                 </div>
             </div>
             <div class="row">
 
+              <div class="col-md-12 col-sm-12">
+                  <div class="section-title text-center">
+                          <h2>Popular Clubs</h2>
+                          <p></p>
+                      </div>
+              </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="welcome-section text-center waves-effect">
                         <img src="assets/images/photo-2.jpg" class="img-responsive" alt="..">
-                        <h4>Office Philosophy</h4>
+                        <h4>Photography Club</h4>
                         <div class="border"></div>
-                        <p>Duis aute irure dolor in reprehen derit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Lorem reprehenderit</p>
+                        <p>Duke University</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="welcome-section text-center waves-effect">
                         <img src="assets/images/photo-1.jpg" class="img-responsive" alt="..">
-                        <h4>Our Mission & Vission</h4>
+                        <h4>Korean Student Organization</h4>
                         <div class="border"></div>
-                        <p>Duis aute irure dolor in reprehen derit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Lorem reprehenderit</p>
+                        <p>University of Maryland, College Park</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="welcome-section text-center waves-effect">
                         <img src="assets/images/photo-3.jpg" class="img-responsive" alt="..">
-                        <h4>Office Value & Rules</h4>
+                        <h4>Anime Society</h4>
                         <div class="border"></div>
-                        <p>Duis aute irure dolor in reprehen derit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Lorem reprehenderit</p>
+                        <p>Massachusetts Institute of Technology</p>
                     </div>
                 </div>
 
@@ -146,9 +150,9 @@
 
     <!-- Start About Us Section 2 -->
     <div class="about-us-section-2">
-        <div class="container">
+        <!-- <div class="container">
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- Start About Us Section 2 -->
 
@@ -160,8 +164,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center">
-                        <h2>Our Services</h2>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate</p>
+                        <h2>More Clubs!</h2>
+                        <p>Our website has a large quantity of clubs available from universities all over the US.</p>
                     </div>
                 </div>
             </div>
@@ -268,30 +272,33 @@
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-md-6 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="600ms">
+                            <div class="col-lg-12 text-center" data-wow-duration="2s" data-wow-delay="600ms">
                                 <div class="form-group waves-effect">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Club Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group waves-effect">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Club Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group waves-effect">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="University Name *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group waves-effect">
+                                    <input type="text" class="form-control" placeholder="Club Password *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
-                            <div class="col-md-6 wow fadeInRight" data-wow-duration="2s" data-wow-delay="600ms">
+                            <!-- <div class="col-md-6 wow fadeInRight" data-wow-duration="2s" data-wow-delay="600ms">
                                 <div class="form-group waves-effect">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Club Password *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
-                            <div class="clearfix"></div>
+                            </div> -->
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-primary waves-effect">Send Message</button>
+                                <button type="submit" class="btn btn-primary waves-effect">Create Free Account</button>
                             </div>
                         </div>
                     </form>
@@ -300,24 +307,6 @@
         </div>
 
     </section>
-
-
-
-
-    <!-- Start Map Section -->
-    <div class="google-map">
-        <div id="map"></div>
-        <div class="contact-info waves-effect">
-            <h4>Contact info</h4>
-            <ul>
-                <li><strong>E-mail :</strong> your-email@mail.com</li>
-                <li><strong>Phone :</strong> +8801-6778776</li>
-                <li><strong>Mobile :</strong> +8801-45565378</li>
-                <li><strong>Web :</strong> yourdomain.com</li>
-            </ul>
-        </div>
-    </div>
-    <!-- End Map Section -->
 
 
 
