--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <div class="col-lg-12">
                     <div class="section-title text-center wow fadeInDown" data-wow-duration="2s" data-wow-delay="50ms">
                         <h2>Contact Us</h2>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate</p>
+                        <p>If you are a university who wants to register with us, please let us know!</p>
                     </div>
                 </div>
             </div>
@@ -272,33 +272,30 @@
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-lg-12 text-center" data-wow-duration="2s" data-wow-delay="600ms">
+                            <div class="col-md-6 wow fadeInLeft" data-wow-duration="2s" data-wow-delay="600ms">
                                 <div class="form-group waves-effect">
-                                    <input type="text" class="form-control" placeholder="Club Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group waves-effect">
-                                    <input type="email" class="form-control" placeholder="Club Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group waves-effect">
-                                    <input type="tel" class="form-control" placeholder="University Name *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group waves-effect">
-                                    <input type="text" class="form-control" placeholder="Club Password *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-6 wow fadeInRight" data-wow-duration="2s" data-wow-delay="600ms">
+                            <div class="col-md-6 wow fadeInRight" data-wow-duration="2s" data-wow-delay="600ms">
                                 <div class="form-group waves-effect">
-                                    <textarea class="form-control" placeholder="Club Password *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div> -->
+                            </div>
+                            <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-primary waves-effect">Create Free Account</button>
+                                <button type="submit" class="btn btn-primary waves-effect">Send Message</button>
                             </div>
                         </div>
                     </form>
