--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<nav class="menu">
 			<div class="icon-list">
 				<a href="#home" class="logo page-scroll waves-effect">Menu</a>
-        <a href="#portfolio" class="page-scroll waves-effect"><i class="fa fa-fw fa-bell-o"></i><span>Login</span></a>
+        <a href="login.html" class="page-scroll waves-effect"><i class="fa fa-fw fa-bell-o"></i><span>Login</span></a>
 				<a href="#about-us" class="page-scroll waves-effect"><i class="fa fa-fw fa-user"></i><span>About Us</span></a>
 				<a href="#team" class="page-scroll waves-effect"><i class="fa fa-fw fa-users"></i><span>Universities</span></a>
 				<a href="#contact" class="page-scroll waves-effect"><i class="fa fa-fw fa-envelope-o"></i><span>Contact Us</span></a>
