--- a/signup.html
+++ b/signup.html
@@ -60,17 +60,19 @@
 <body>
 
   <form role="form">
-  <div class="log-in-form">
+  <div class="sign-up-form">
     <div class="sign-up-header"></div>
     <div class="arrow-down"></div>
     <div class="sign-up-body">
-      <h1><span>Log In</span></h1>
+      <h1>Create a <span>free</span> account</h1>
       <p class="note"></p>
+      <input type="name" class="form-control" id="name" placeholder="Club Name"></input>
+      <input type="university" class="form-control" id="university" placeholder="University Name"></input>
       <input type="email" class="form-control" id="email" placeholder="Email"></input>
       <input type="password" class="form-control" id="password" placeholder="Password"></input>
-      <button type="submit" class="btn btn-sign-up">Sign In</button>
+      <button type="submit" class="btn btn-sign-up">Sign Up</button>
     <p></p>
-<p>Not registered? <a href="signup.html">Create an account</a></p>
+<p>Already registered? <a href="login.html">Log In</a></p>
     </div>
   </div>
 </form>
