made few changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
     <!-- End Header Section -->
 
 
-
+    <section id="search">
+        <!-- <div class="container">
+            <div class="search">
+                <input class="search__input" placeholder="Enter University Name" />
+                <button class="fa fa-search fa-2x search__button"></button>
+            </div>
+        </div> -->
+    </section>
 
     <!-- Start About Us Section -->
     <section id="about-us" class="about-us-section-1">
@@ -101,7 +108,7 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title text-center">
                             <h2>About Us</h2>
-                            <p>We are a blah blah organization.</p>
+                            <p>We are an organization dedicated to help high school students and college freshman who don't know what is going on around them find "cool" clubs.</p>
                         </div>
                 </div>
             </div>
